<resources>
    <string name="app_name">Grocery Tracker</string>
    <string name="button_new_list">Create New List</string>
    <string name="button_prev_lists">View Previous Lists</string>
    <string name="textview_bar_graph">Bar Graph</string>
    <string name="textview_line_graph">Line Graph</string>
    <string name="textview_prev_lists">Previous Lists from Database</string>
    <string name="button_add_items">Add Items</string>
    <string name="button_save_list">Save List</string>
    <string name="edit_text_list_name">List Name</string>
    <string name="button_recent">Recent Items</string>
    <string name="textview_list_placeholder">List of items (Placeholder and Fragment)</string>
    <string name="edit_text_store">Store</string>
    <string name="edit_text_date">Date(MM/DD/YYYY)</string>
    <string name="edit_text_budget">Budget</string>
    <string name="remaining_budget_label">Remaining Budget</string>
    <string name="number_quantity"># Quantity</string>
    <string name="number_price"># Price</string>
    <string name="textview_quantity">Quantity</string>
    <string name="textview_price">Price</string>
    <string name="button_add_item">Add Item To List</string>
    <string name="textview_carbs">Carbs (g) </string>
    <string name="texetview_protein">Protein (g)</string>
    <string name="textview_fat">Fat (g)</string>
    <string name="textview_other">Other (g)</string>
    <string name="spinner_category">Category</string>
    <string name="edit_text_item">Item</string>
    <string name="button_view_stats">View More Statistics</string>
    <string name="textview_stats_list_holder">Clickable lists appear here</string>
    <string name="textview_preview_holder">Preview of List Items</string>
    <string name="textview_stats_placeholder">Statistics appear here</string>
    <string name="textview_username">Username</string>
    <string name="textview_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_home">Home</string>
    <string name="button_create_acct">Create Account</string>
    <string name="name">Full Name</string>
    <string name="retype_password">Retype Password</string>
    <string name="create_account">Create Account</string>
    <string name="birthday">Birthday</string>
    <string name="title_activity_login">Sign in</string>
    <string name="textview_account_confirmation">Account successfully created!</string>
    <string name="content_desc_logo">Grocery Tracker Logo</string>
    <string name="button_options">Options</string>
    <string name="button_logout">Log Out</string>
    <string name="button_cancel_adding_item">Cancel</string>
    <string name="textview_itemName">Item</string>
    <string name="textview_initial_quantity">Initial Quantity</string>
    <string name="textview_update_usage">Update Usage</string>
    <string name="button_usage">+</string>
    <string name="textview_remaining_quanityt">Quantity Remaining</string>
    <string name="textview_most_recent_purchase_data">Most Recent Purchase Data</string>
    <string name="textview_usage_stats">Usage Statistics</string>
    <string name = "textview_category_statsw">Categories Purchased</string>
    <string name="textview_home_pieChart_title">Categories of Most Recent List</string>
    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password_hint">Passwords must contain at least 1 lowercase letter, 1 uppercase letter, and 1 digit</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
