<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_add_items"
        android:layout_width="347dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/button_add_items"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView_list"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_save_new_list"
        android:layout_width="346dp"
        android:layout_height="35dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_save_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView_list"
        app:layout_constraintVertical_bias="1.0" />

    <ScrollView
        android:id="@+id/scrollView_list"
        android:layout_width="368dp"
        android:layout_height="233dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="156dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_list_fragment_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_list_placeholder" />
        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/editText_list_name"
        android:layout_width="367dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_text_list_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_store_info"
        android:layout_width="365dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_text_store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/date"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/edit_text_date"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="98dp" />

    <EditText
        android:id="@+id/number_budget"
        android:layout_width="172dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/edit_text_budget"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="99dp" />

</android.support.constraint.ConstraintLayout>