<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <EditText
        android:id="@+id/number_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_price" />

    <EditText
        android:id="@+id/editText_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_quantity" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="match_parent"
        android:layout_height="49dp" />

    <TextView
        android:id="@+id/textView_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spinner_category" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="260dp">

        <LinearLayout
            android:layout_width="147dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_protein"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/texetview_protein"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_fat"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:text="@string/textview_fat"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_carbs"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:text="@string/textview_carbs"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_other"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:text="@string/textview_other"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_protein"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText_fat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText_carbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/button_add_item_to_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="backToNewListActivity"
        android:text="@string/button_add_item" />

</LinearLayout>