<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_category"
        android:layout_width="346dp"
        android:layout_height="18dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/spinner_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_category" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="350dp"
        android:layout_height="38dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_quantity" />

    <EditText
        android:id="@+id/edit_text_item"
        android:layout_width="359dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_text_item"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="12dp" />

    <Button
        android:id="@+id/button_add_item_to_list"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:layout_marginTop="500dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="backToNewListActivity"
        android:text="@string/button_add_item"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/number_price"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/number_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/number_quantity"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/number_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_price"
        android:layout_width="170dp"
        android:layout_height="19dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/textview_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_price" />

    <TextView
        android:id="@+id/textview_quantity"
        android:layout_width="173dp"
        android:layout_height="17dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/textview_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_quantity" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="245dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="248dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp">

        <LinearLayout
            android:layout_width="177dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_protein"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:text="@string/texetview_protein"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textview_fat"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/textview_fat"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textview_carbs"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/textview_carbs"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textview_other"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/textview_other"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/editText9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/editText10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/editText11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_back_home"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/button_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp" />

</android.support.constraint.ConstraintLayout>